--- a/index.ORIG.html
+++ b/index.ORIG.html
@@ -3,9 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Dev 101</title>
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
-    
+    <a href="https://www.google.com/" target="_blank">Go to Google</a>
+    <p id="my-id">Welcome to Web Dev 101</p>
+    <h1 class="unique">This is <span style="color: red;">heading</span> 1</h1>
+    <h2 class="text-blue">This is heading 2</h2>
+    <h3 style="background-color: green;">This is heading 3</h3>
+    <h4>This is heading 4</h4>
+    <h5 class="text-blue bg-orange">This is heading 5</h5>
+    <div>This is a container</div>
+    <p>This is a paragraph <br /> or I can be as long as I want</p>
+    <hr />
+    <ol>
+        <li>Step 1</li>
+        <li>Step 2</li>
+        <li>Step 3</li>
+    </ol>
+    <ul>
+        <li>Pizza</li>
+        <li>Burger</li>
+        <li>Soda</li>
+    </ul>
+    <img src="assets/images/html cheat sheet.PNG" alt="html cheat sheet" />
+    <table>
+        <thead>
+            <tr>
+                <td>No.</td>
+                <td>Name</td>
+                <td>Country</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Juan</td>
+                <td>PH</td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="container">
+        <div class="box1">One</div>
+        <div class="box2">Two</div>
+        <div class="box3">Three</div>
+    </div>
+</body>
+</html>
+
+<!--
+
+https://www.figma.com/design/gmXis7OrxwNrJPel6H5pKJ/Personal-Portfolio-Website-Template-(Community)?node-id=1-23&t=HcEaq3AQciqabz79-0
+https://www.w3schools.com/css/css_positioning.asp
+https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+https://flexboxfroggy.com/
+https://getbootstrap.com/docs/5.0/layout/breakpoints/
+
+-->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="assets/styles/style.css">
+</head>
+<body>
+    <header class="container">
+        <div class="destop-menu">
+            <p>Greggy Ramos</p>
+            <div class="options">
+                <p>Home</p>
+                <p>Portfolio</p>
+                <p>Contacts</p>
+            </div>
+        </div>
+    </header>
+
+    <section class="container">
+        <div class="hero">
+            
+        </div>
+
+    </section>
+
+<script src="assets/scripts/main.js"></script>
 </body>
 </html>
