--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <span title="welcome" id="hi">Hello</span> -->
-    <span id="hi" data-test="this is a test">Hello</span>
-    <span id="bye" class="bye1" >World</span>
+    <header class="container">
+        <div class="destop-menu">
+            <p>Greggy Ramos</p>
+            <div class="options">
+                <p>Home</p>
+                <p>Portfolio</p>
+                <p>Contacts</p>
+            </div>
+        </div>
+    </header>
+
+    <section class="container">
+        <div class="hero">
+            
+        </div>
+
+    </section>
 
 <script src="assets/scripts/main.js"></script>
 </body>
