--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Personal Website</title>
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
     <header class="container">
@@ -16,14 +17,6 @@
             </div>
         </div>
     </header>
-
-    <section class="container">
-        <div class="hero">
-            
-        </div>
-
-    </section>
-
 <script src="assets/scripts/main.js"></script>
 </body>
 </html>
