--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
 </head>
 <body>
     <header class="container">
-        <div class="destop-menu">
-            <p>Greggy Ramos</p>
-            <div class="options">
-                <p>Home</p>
-                <p>Portfolio</p>
-                <p>Contacts</p>
+        <div class="header-menu">
+            <a href="https://www.facebook.com/greggy.ramos" target="_blank">Greggy Ramos</a>
+            <div class="main-menu">
+                <a href="">Portfolio</a>
+                <a href="">Contacts</a>
+                <a href="">About Me</a>
             </div>
         </div>
+        <img class="picture" src="assets/images/2R Picture.jpg" alt="2R Picture" />
     </header>
+
+    <section class="container">
+        <div class="main-content">
+            <h1>Hi, I'm Greggy Ramos</h1>
+            <h2>System Administrator</h2>
+            <p>Eighteen years of total working experience in different environments such as IT Support, Retail, Consultancy, Telecommunication, and BPO which gives me the knowledge and skills and the ability to work with different types of people. I can work very efficiently within a team and can also work individually with minimal supervision. I am a fun, hard-working individual who pays attention to details and procedures. Have lots of ideas and currently looking for a company where I can share and enhance my knowledge and skills. </p>
+        </div>
+    </section>
 <script src="assets/scripts/main.js"></script>
 </body>
 </html>
