--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="header-menu">
             <a href="https://www.facebook.com/greggy.ramos" target="_blank">Greggy Ramos</a>
             <div class="main-menu">
+                <a href="">Home</a>
                 <a href="">Portfolio</a>
                 <a href="">Contacts</a>
-                <a href="">About Me</a>
             </div>
         </div>
         <img class="picture" src="assets/images/2R Picture.jpg" alt="2R Picture" />
